<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.ebayopensource.vjet.test</groupId>
  <artifactId>test-parent</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
      	<module>org.ebayopensource.vjet.test.util</module>
      	<module>org.ebayopensource.vjet.test.core.jst</module>
      	<module>org.ebayopensource.vjet.test.core.jsnativetypes</module>
      	<module>org.ebayopensource.vjet.test.core.jstojava</module>
      	<module>org.ebayopensource.vjet.test.core.javatojs</module>
      	<module>org.ebayopensource.vjet.test.core.vjotool</module>
      	<module>org.ebayopensource.vjet.test.rt.vjoruntime</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <tycho-version>0.12.0</tycho-version>
    <vjet-version>1.0.0-SNAPSHOT</vjet-version>
  </properties>

  <repositories>
     <repository>
        <id>helios</id>
        <url>http://download.eclipse.org/releases/helios/</url>
        <layout>p2</layout>
     </repository>
     <repository>
        <id>orbit</id>
        <url>http://download.eclipse.org/tools/orbit/downloads/drops/R20100519200754/repository</url>
        <layout>p2</layout>
     </repository>
     <repository>
        <id>m2eclipse</id>
        <url>http://m2eclipse.sonatype.org/sites/m2e</url>
        <layout>p2</layout>
     </repository>
  </repositories>
  
  <dependencies>
      <!-- Testing Dependencies -->
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.8.1</version>
      </dependency>
  </dependencies>
  <profiles>
	<profile>
		<id>mac-family</id>
		<activation>
      		<os>
        			<family>mac</family>
      		</os>
    		</activation>
		<properties>
			<eclipse.test.argline>-Xms512m -Xmx1024m -XX:MaxPermSize=256M -XstartOnFirstThread</eclipse.test.argline>
   		</properties>
	</profile>
	<profile>
		<id>non-mac-families</id>
		<activation>
      		<os>
        			<family>!mac</family>
      		</os>
    		</activation>
		<properties>
			<eclipse.test.argline>-Xms512m -Xmx1024m -XX:MaxPermSize=256M</eclipse.test.argline>
   		</properties>
	</profile>
   </profiles>
  <build>

    <sourceDirectory>${project.basedir}/none</sourceDirectory> 
    <testSourceDirectory>${project.basedir}/src</testSourceDirectory>
    <testOutputDirectory>${project.build.directory}/test-classes</testOutputDirectory>
    <testResources>
      <testResource>
        <directory>${project.basedir}/test/resources</directory>
      </testResource>
    </testResources>
    <plugins>
   	  <plugin>
 		   <groupId>org.apache.maven.plugins</groupId>
	       <artifactId>maven-resources-plugin</artifactId>
	       <executions>
	         <execution>
	           <id>copy-resources</id>
	           <!-- here the phase you need -->
	           <phase>validate</phase>
	           <goals>
	             <goal>copy-resources</goal>
	           </goals>
	           <configuration>
	             <outputDirectory>${basedir}/target/test-classes</outputDirectory>
	             <resources>          
	               <resource>
	                 <directory>${basedir}/src</directory>
	                 <filtering>false</filtering>
	                 <excludes>
			          <exclude>**/*.java</exclude>
			      </excludes>
	               </resource>
	             </resources>              
	           </configuration>            
	         </execution>
	       </executions>
      </plugin>
      <plugin>
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>tycho-maven-plugin</artifactId>
         <version>${tycho-version}</version>
         <extensions>true</extensions>
      </plugin>
      <plugin>
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>target-platform-configuration</artifactId>
         <version>${tycho-version}</version>
         <configuration>
            <resolver>p2</resolver>
            <environments>
               <environment>
                  <os>linux</os>
                  <ws>gtk</ws>
                  <arch>x86</arch>
               </environment>
               <environment>
                  <os>win32</os>
                  <ws>win32</ws>
                  <arch>x86</arch>
               </environment>
               <environment>
                  <os>macosx</os>
                  <ws>cocoa</ws>
                  <arch>x86_64</arch>
               </environment>
            </environments>
         </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-antrun-plugin</artifactId>
            <version>1.3</version>
            <executions>
               <execution>
                  <phase>validate</phase>
                  <goals>
                     <goal>run</goal>
                  </goals>
                  <configuration>
                     <tasks>
                        <property name="jarDir" value="${project.parent.basedir}/org.ebayopensource.vjet.test.util/lib"/>
                       	<property name="destDir" value="${basedir}/target/classes"/>
                       	<property name="includeValue" value="JUnitNexGen.jar"/>
                        <ant antfile="${project.parent.basedir}/build.xml" />
                     </tasks>
                  </configuration>
               </execution>
            </executions>
            <dependencies>
               <dependency>
                  <groupId>org.apache.ant</groupId>
                  <artifactId>ant-nodeps</artifactId>
                  <version>1.8.1</version>
               </dependency>
            </dependencies>
        </plugin>
      	<!-- tycho plugins -->
        <plugin>
           <groupId>org.eclipse.tycho</groupId>
           <artifactId>tycho-compiler-plugin</artifactId>
           <version>${tycho-version}</version>
           <configuration>
              <encoding>UTF-8</encoding>
              <source>1.6</source>
              <target>1.6</target>
           </configuration>
        </plugin>
        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
           <version>2.4.1</version>
           <configuration>
              <encoding>UTF-8</encoding>
           </configuration>
        </plugin>
        <plugin>
           <groupId>org.eclipse.tycho</groupId>
           <artifactId>tycho-packaging-plugin</artifactId>
           <version>${tycho-version}</version>
           <configuration>
              <archiveSite>true</archiveSite>
           </configuration>
        </plugin>
        <!-- Maven Plugins -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>1.5</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>1.1</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>jaxb2-maven-plugin</artifactId>
          <version>1.3</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>findbugs-maven-plugin</artifactId>
          <version>2.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-pmd-plugin</artifactId>
          <version>2.5</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>1.0-beta-1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>2.4</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>2.3.1</version>
          <dependencies>
		      <!-- Testing Dependencies -->
		      <dependency>
		        <groupId>junit</groupId>
		        <artifactId>junit</artifactId>
		        <version>4.8.1</version>
		      </dependency>
		  </dependencies>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>2.1.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>2.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>2.1-beta-1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>2.1</version>
        </plugin>
        <!--  
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.5</version>
          <dependencies>
		      <dependency>
		        <groupId>junit</groupId>
		        <artifactId>junit</artifactId>
		        <version>4.8.1</version>
		      </dependency>
		  </dependencies>
        </plugin>
        -->

        <plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<version>2.5</version>
			<dependencies>
				<dependency>
					<groupId>org.testng</groupId>
					<artifactId>testng</artifactId>
					<version>5.12.1</version>
				</dependency>
			</dependencies>
			<configuration>
                <argLine>${eclipse.test.argline}</argLine>
				<systemPropertyVariables>
		            <java.source.path>${java.source.path}</java.source.path>
		        </systemPropertyVariables>
		        <enableAssertions>false</enableAssertions>
				<testFailureIgnore>false</testFailureIgnore>
				<includes>
					<include>**/*Test.java</include>
					<include>**/*Tests.java</include>
				</includes>
				<excludes>
					<exclude>**/All*Tests.java</exclude>
					<exclude>**/*Base*.java</exclude>
				</excludes>
			</configuration>
		</plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.5</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>2.1</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <dependencyManagement>
    <dependencies>
      <!-- Testing Dependencies -->
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.8.1</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

</project>
